[package]
name = "vue-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"

thiserror = "1.0.32"

wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
js-sys = "0.3.59"

